--- a/instaCloneServer/package.json
+++ b/instaCloneServer/package.json
@@ -2,10 +2,11 @@
   "name": "instaclone",
   "version": "1.0.0",
   "description": "",
-  
   "main": "index.js",
+  "engines" :{"node": "14.17.6"},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "src/index.js", 
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION= false npm install --prefix insta-clone-frontend && npm run build --prefix insta-clone-frontend "
   },
   "keywords": [],
   "author": "",
@@ -13,11 +14,13 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-basic-auth": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.1"
   }
 }
